syntax = "proto3";
package test;

message RpcRequest {
    bytes data = 1;
}

message RpcResponse {
    bytes data = 1;
}

service TestService {
    rpc GetUnary (RpcRequest) returns (RpcResponse);
    rpc GetStream (RpcRequest) returns (stream RpcResponse);
    rpc SendStream (stream RpcRequest) returns (RpcResponse);
    rpc Bidirect (stream RpcRequest) returns (stream RpcResponse);
}